--- a/_includes/post-title.html
+++ b/_includes/post-title.html
@@ -4,5 +4,19 @@
 			<a href="{{ site.baseurl }}/category/{{ category | slugify }}/">{{ category | capitalize }}</a>
 		</span>
 	{% endfor %}
-	<span class="post-date">{{ include.post.date | date: "%B %d, %Y" }}</span>
+	<span class="post-date">
+		{% if include.post.start_date and include.post.end_date %}
+		  {{ include.post.start_date | date: "%B %Y" }} - 
+		  {% if include.post.end_date == "current" %}
+			Current
+		  {% else %}
+			{{ include.post.end_date | date: "%B %Y" }}
+		  {% endif %}
+		{% elsif include.post.start_date %}
+		  {{ include.post.start_date | date: "%B %Y" }}
+		{% else %}
+		  {{ include.post.date | date: "%B %d, %Y" }}
+		{% endif %}
+	  </span>
+	  
 </p>
