--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -5,15 +5,15 @@ layout: default
 <section class="hero" style="background-image: url(https://source.unsplash.com/MqJX_8EaStM/2000x1322)">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1>The latest news</h1>
-			<p class="subtext">Hear the latest progress on Frisco and tips on making life long friends.</p>
+			<h1>Projects Categorized Under {{ page.title | capitalize }}</h1>
+			<p class="subtext">These projects highlight my work in {{ page.title | capitalize }}.</p>
 		</div>
 	</div>
 </section>
 
 <section>
 	<div class="text-container">
-		<p class="change-category">You're currently looking at advice categorised under <strong>{{ page.title }}</strong>. <a href="{{ site.baseurl }}/blog/">View all posts</a> instead.</p>
+		<p class="change-category">You're currently looking at projects categorised under <strong>{{ page.title | capitalize }}</strong>. <a href="{{ site.baseurl }}/projects/">View all projects</a> instead.</p>
 
 		<ul class="blog-posts">
 			{% include list-posts.html posts=page.posts %}
